--- a/data/people.yml
+++ b/data/people.yml
@@ -1,6 +1,6 @@
 1000ch:
   url: https://twitter.com/1000ch
-  image: /hugo-boilerplate-podcast/img/people/1000ch.jpg
+  image: /img/people/1000ch.jpg
 hiloki:
   url: https://twitter.com/hiloki
-  image: /hugo-boilerplate-podcast/img/people/hiloki.jpg
+  image: /img/people/hiloki.jpg
