--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 baseurl: "/"
-title: "Java Dev Podcast"
+title: "Окно во двор"
 footnotereturnlinkcontents: "↩"
 contentdir: "content"
 layoutdir: "layout"
