--- a/data/people.yml
+++ b/data/people.yml
@@ -1,6 +1,18 @@
-1000ch:
+volyx:
   url: https://twitter.com/1000ch
   image: /img/people/1000ch.jpg
-hiloki:
+anabilisa:
   url: https://twitter.com/hiloki
   image: /img/people/hiloki.jpg
+iphilimonov:
+  url: https://twitter.com/hiloki
+  image: /img/people/hiloki.jpg
+jeanne_jour:
+  url: https://twitter.com/hiloki
+  image: /img/people/hiloki.jpg
+egermanovich:
+  url: https://twitter.com/hiloki
+  image: /img/people/hiloki.jpg
+maria_o:
+  url: https://twitter.com/hiloki
+  image: /img/people/hiloki.jpg  
